--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,152 @@
-.App {
-  text-align: center;
+/** LAYOUT **/
+.layout {
+  width: 80vw;
+  margin: 5vh auto;
+  font-family: 'Helvetica';
+  display: grid;
+  grid-template-rows: 20vh 80vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-layout {
+  display: grid;
+  grid-template-rows: 10% 40% 6%;
+  grid-row-gap: 5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/** HEADER **/
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 1.5rem;
+  color: #666
+}
+.accuracy {
+  font-size: 1.1rem;
+  margin-left: 0.2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/** QUESTION **/
+
+.question-text {
+  font-size: 1.3rem;
+  color: #555;
+}
+.options-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 1rem;
+  margin-top: 1rem;
+}
+
+.option {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 180px;
+  font-size: 1rem;
+  border-radius: 5px;
+  background-color: #DDD;
+  color: #888;
+  border: 1px solid #CCC;
+  transition: all ease-in 0.1s;
+}
+
+.option:hover {
+  cursor: pointer;
+  box-shadow: 1px 1px #CCC;
+}
+
+.option:disabled:hover {
+  box-shadow: none;
+}
+
+.correct-option {
+  background-color: white;  
+}
+
+.incorrect-answer {
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/** CONTROLS **/
+.controls-grid {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.feedback {
+  background-color: #FFF;
+  color: #888;
+  border: 1px solid #CCC;
+  border-radius: 5px;
+  min-width: 70%;  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+.next-button {
+  background-color: #EEE;
+  color: #555;
+  border: 1px solid #CCC;
+  border-radius: 5px;
+  min-width: 30%;  
+  flex-grow: 1;
+  transition: all ease-in 0.1s;  
+  border: 1px solid #888;
+}
+
+.next-button:hover {
+  cursor: pointer;
+  border: 1px solid #AAA;
+}
+
+/** MEDIA QUERIES **/
+
+/** MOBILE DEVICE **/
+@media screen and (max-width:414px) {
+   .options-grid {
+     grid-template-columns: 1fr;
+   } 
+   .option {
+     height: 40px;
+   }
+
+   .controls-grid {
+     flex-direction: column;
+   }
+   .feedback {
+     border: none;
+   }
+   .next-button {
+     margin-top: 5%;
+     padding: 2.5%;
+   }
+}
+
+/** TABLET DEVICE **/
+@media screen and (max-width:768px) {
+  .options-grid {
+    grid-template-columns: 1fr 1fr;
+  } 
+  .option {
+    height: 140px;
   }
-  to {
-    transform: rotate(360deg);
+
+  /* .controls-grid {
+    flex-direction: column;
   }
+  .feedback {
+    border: none;
+  }
+  .next-button {
+    margin-top: 5%;
+    padding: 2.5%;
+  } */
 }
